# Blurer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  face_remover.hpp  main.cpp
